# PythonProjectBootstrapper

./: .gitignore  .python_project_bootstrapper_config.yml  .python_project_bootstrapper_manifest.yml  ActivateEpilog.py  BootstrapEpilog.py  Build.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  LICENSE.txt  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  standard.yaml
src/: AutoGitSemVer.yaml  BuildBinary.py  PopulateCookiecutterPrompts.py
src/PythonProjectBootstrapper/: EntryPoint.py  Math.py  ProjectGenerationUtils.py  __init__.py
src/PythonProjectBootstrapper/package/: cookiecutter.json  cookiecutter_prompts.yaml  local_extensions.py
src/PythonProjectBootstrapper/package/hooks/: post_gen_project.py  pre_gen_project.py  startup.py
src/PythonProjectBootstrapper/package/templates/: python_header.py
src/PythonProjectBootstrapper/package/{{ cookiecutter.__empty_dir }}/: .gitignore  .python_project_bootstrapper_config.yml  BootstrapEpilog.py  Build.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SECURITY.md  pyproject.toml
src/PythonProjectBootstrapper/package/{{ cookiecutter.__empty_dir }}/.github/: CODEOWNERS
src/PythonProjectBootstrapper/package/{{ cookiecutter.__empty_dir }}/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/PythonProjectBootstrapper/package/{{ cookiecutter.__empty_dir }}/.github/workflows/: codeql.yml  standard.yaml
src/PythonProjectBootstrapper/package/{{ cookiecutter.__empty_dir }}/Licenses/: BSD-3-Clause-Clear_LICENSE.txt  MIT_LICENSE.txt
src/PythonProjectBootstrapper/package/{{ cookiecutter.__empty_dir }}/src/: AutoGitSemVer.yaml  BuildBinary.py
src/PythonProjectBootstrapper/package/{{ cookiecutter.__empty_dir }}/src/{{ cookiecutter.pypi_project_name }}/: EntryPoint.py  __init__.py
src/PythonProjectBootstrapper/python_project/: cookiecutter.json  cookiecutter_prompts.yaml
src/PythonProjectBootstrapper/python_project/hooks/: post_gen_project.py  pre_gen_project.py
src/PythonProjectBootstrapper/python_project/{{ cookiecutter.__empty_dir }}/: HelloWorld1.txt  README.md
src/PythonProjectBootstrapper/python_project/{{ cookiecutter.__empty_dir }}/.github/workflows/: codeql.yml  standard.yaml
src/PythonProjectBootstrapper/python_project/{{ cookiecutter.__empty_dir }}/Dir/: HelloWorld2.txt
src/PythonProjectBootstrapper/python_project/{{ cookiecutter.__empty_dir }}/Licenses/: Apache-2.0_LICENSE.txt  GPL-3.0-or-later_LICENSE.txt  MIT_LICENSE.txt
src/PythonProjectBootstrapper/python_project/{{ cookiecutter.__empty_dir }}/src/{{ cookiecutter.pypi_project_name }}/: Math.py
src/PythonProjectBootstrapper/python_project/{{ cookiecutter.__empty_dir }}/tests/: EntryPoint_UnitTest.py  Math_UnitTest.py
tests/: EntryPoint_UnitTest.py  Math_UnitTest.py  ProjectGenerationUtils_UnitTest.py
